# ProofHub

./: .gitignore  README.md  cat
api/: ProofHub.cabal  README.md  stack.yaml
api/src/: App.hs  JsonModel.hs  Model.hs  Utils.hs
api/src/Api/: Auth.hs  Category.hs  Comment.hs  Directory.hs  File.hs  Main.hs  Project.hs  Proof.hs  Prover.hs  User.hs
api/src/Model/: Model.hs  UserRole.hs
api/static/: kek.txt
api/static/avatars/: admin2  admin3  kek.txt  user11  user12
front/: .gitignore  elm.json
front/src/: Dashboard.elm  Decoders.elm  Encoders.elm  LoginView.elm  Message.elm  Model.elm  Pages.elm  ProjectBrowser.elm  ProjectView.elm  ProofView.elm  Settings.elm  Utils.elm  index.elm
