name:                ProofHub
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ProofHub#readme
license:             BSD3
license-file:        LICENSE
author:              Nikita Yurchenko
maintainer:          nic.yurchenko@gmail.com
copyright:           2019 Nick Yurchenko
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     App
                     , Model
                     , Utils
                     , JsonModel
                     , Api.Auth
                     , Api.User
                     , Api.Main
                     , Api.Project
                     , Api.Directory
                     , Api.Proof
                     , Api.Comment
                     , Api.Category
                     , Api.Prover
                     , Api.File
                     , Model.Model
                     , Model.UserRole
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , cryptohash-sha256
                     , deepseq
                     , derive
                     , directory
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , http-api-data
                     , http-conduit
                     , http-types
                     , monad-control
                     , monad-logger
                     , mtl
                     , mmorph
                     , natural-transformation
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , process
                     , quickcheck-instances
                     , random
                     , resourcet
                     , split
                     , servant
                     , servant-auth
                     , servant-auth-server
                     , servant-multipart
                     , servant-server
                     , servant-docs
                     , string-conversions
                     , text
                     , time
                     , transformers
                     , wai
                     , wai-extra
                     , wai-cors
                     , warp
                     , warp-tls
                     , word8
  ghc-options:       -Wall
                     -fno-warn-unused-do-bind
  default-extensions: TypeOperators
                      DataKinds
                      FlexibleContexts
                      ScopedTypeVariables
                      DeriveGeneric
                      OverloadedStrings
                      TypeFamilies                      
  default-language:   Haskell2010

executable ProofHub-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ProofHub
  default-language:    Haskell2010

test-suite ProofHub-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ProofHub
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson  
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zelinskiy/ProofHub
